hw3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: users-service-deployment
spec:
    replicas: 1
    strategy:
      type: Recreate
    revisionHistoryLimit: 0  
    selector:
       matchLabels:
          app: users-service-deployment
    template:
       metadata:
          labels:
             app: users-service-deployment
       spec:
          containers:
          - name: users-service
            image: alanlom/users-service:1.0
            ports:
              - name: graphql
                containerPort: 4000
