hw3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-service-deployment
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: NodePort
